--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <label for="algo">Select Algorithm</label>
                         <select class="form-control" id="algo">
                             <option value="di" selected>Dijkstra's Algorithm</option>
-                            <option>2</option>
+                            <option value="as">A Star (A*)</option>
                             <option>3</option>
                             <option value="bf">Breadth First Search</option>
                             <option>5</option>
