depth first added

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                             <option value="as">A Star (A*)</option>
                             <option>3</option>
                             <option value="bf">Breadth First Search</option>
-                            <option>5</option>
+                            <option value="df">Depth First Search</option>
                         </select>
                     </div>
                 </div>
